# rusty

./: Cargo.toml  README.md
scripts/: colors.py
src/: commands.rs  main.rs  utils.rs
src/commands/: giphy.rs  image.rs  mod.rs  nega.rs  strain.rs  ud.rs  weather.rs
