[package]
name = "rusty"
version = "0.1.0"
authors = ["Marc DellaVolpe <marc@cureatr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10", features = ["json", "blocking"] }
ctrlc = {}
serde = {features = ["derive"]}
serde_json = {}
rand = {}
soup = {}
regex = {}
chrono = {}
sentiment = {}
clap = "3.0.0-beta.2"
image = {}
log = {}
env_logger = {}
color_space = {}
lazy_static = {}