[package]
name = "rusty"
version = "0.2.0"
authors = ["Marc DellaVolpe <marc.dellavolpe@gmail.com>"]
edition = "2021"

[dependencies]
openssl-sys = "0.9"
openssl = { version = "0.10" }
reqwest = { version = "0.10", features = ["json", "blocking"] }
ctrlc = {}
serde = {features = ["derive"]}
serde_json = {}
rand = {}
soup = {}
regex = {}
chrono = {}
sentiment = {}
clap = "3.0.0-beta.2"
image = {}
log = {}
env_logger = {}
color_space = {}
lazy_static = {}
rusqlite = {}
