[package]
name = "rusty"
version = "0.2.0"
authors = ["Marc DellaVolpe <marc.dellavolpe@gmail.com>"]
edition = "2018"

[features]
default = ["dangerous_configuration"]
dangerous_configuration = []

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
ctrlc = {}
serde = {features = ["derive"]}
serde_json = {}
rand = {}
soup = {}
regex = {}
chrono = {}
# sentiment = {}
clap = "3.0.0-beta.2"
# image = {}
log = {}
env_logger = {}
# color_space = {}
lazy_static = {}
rusqlite = { features = ["chrono"] }
rustls = { features=["dangerous_configuration"] }
webpki = {}
webpki-roots = {}
linkify = {}
